<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <Button
        android:id="@+id/googleboton7"
        android:layout_width="332dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/google_rounded"
        android:drawableLeft="@drawable/google"
        android:paddingStart="16dp"
        android:text="Iniciar sesión con Google"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonrecupera"
        app:layout_constraintVertical_bias="0.028" />

    <ImageView
        android:id="@+id/imagenicono"
        android:layout_width="167dp"
        android:layout_height="142dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/Nombreapp"
        android:layout_width="157dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toEndOf="@id/imagenicono"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textodescriptivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/texto_segundario"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <ImageView
        android:id="@+id/imagenes2"
        android:layout_width="81dp"
        android:layout_height="148dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textodescriptivo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_3__1_" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="218dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_rounded"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="  Email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textodescriptivo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_rounded"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="  Contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsuario"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/botoningresar"
        android:layout_width="252dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton_redondeado"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/ingresar"
        android:textColor="@color/design_default_color_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextContraseña"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/botonrecupera"
        android:layout_width="184dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/recuperar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botoningresar"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/botonregistro"
        android:layout_width="96dp"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="registrate"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleboton7" />

    <TextView
        android:id="@+id/textoderegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="¿no tienes cuenta?,"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/botonregistro"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleboton7"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
